# RetroRec

./: ARCHITECTURE.md  CMakeLists.txt  README.md  ROADMAP.md
.github/workflows/: build.yml
src/: RecorderEngine.hpp  main_prototype.cpp
src/core/: AudioCapture.hpp  DXGICapture.hpp  RingBuffer.hpp  VideoEncoder.hpp
src/ui/: OverlaySystem.hpp
